--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 body {
-    background-color: silver;
+    background-color: black;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: bold;
     text-align: center;
